# Robotic_Grippers

dissertation_template/: timelog.md
dissertation_template/STL_files/3_fingered_gripper/: .Gripper_Assembly - worm-1.STL.icloud
dissertation_template/dissertation/: l4proj.tex  references.rtf  references.txt
dissertation_template/src/: readme.md  setup.py  tkinterUI.py
dissertation_template/src/Arduino/Both_Control/: Both_Control.ino
dissertation_template/src/Arduino/Dynamix_Ros2.0/: Dynamix_Ros2.0.ino
dissertation_template/src/Arduino/Gripper_Control/: Gripper_Control.ino
dissertation_template/src/Arduino/control_motors/: control_motors.ino
dissertation_template/src/Arduino/libraries/Dynamixel_Serial/: Dynamixel_Serial.cpp
dissertation_template/src/Arduino/stepperMotor/: stepperMotor.ino
dissertation_template/src/Arduino/stepper_Control/: stepper_Control.ino
dissertation_template/src/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
dissertation_template/src/catkin_ws/devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
dissertation_template/src/catkin_ws/src/gripper_scripts/: CMakeLists.txt  package.xml
dissertation_template/src/catkin_ws/src/gripper_ui/: CMakeLists.txt  gripper_ui.py  package.xml
dissertation_template/src/catkin_ws/src/teleop_twist_keyboard/: package.xml  teleop_twist_keyboard.py
dissertation_template/src/pololu-tic-1.8.0-linux-x86/: LICENSE.html  README.txt  ticcmd
dissertation_template/status_report/: status_report.tex
dissertation_template/summer/: summer.md
(+58 files in other folders)
